# mnemopay-sdk

./: .cursorrules  .env.example  .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  GEMINI.md  Jenkinsfile  LICENSE  NOTICE  README.md  demo-recording.js  docker-compose.yml  fly.toml  jest.config.js  mem-profile.test.ts  package-lock.json  package.json  smithery.yaml  start-dashboard.bat  status-archive.md  status.md  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml
claude-plugin/: .mcp.json  README.md
compliance/: eu-ai-act-annex-iv.md
dashboard/: Dockerfile  fly.toml  index.html  server.js
docs/: AUTO-OBSERVER-DESIGN.md  CLAUDE-WORK-PATTERN.md  aaif-rfc-agent-trust-attestation.md  agent-memory-sota-2026-04.md  agent-sdk-guide.md
integrations/crewai/: README.md  mnemopay_crewai.py  pyproject.toml
integrations/hermes-plugin/: README.md  plugin.yaml  pyproject.toml
integrations/hermes-plugin/mnemopay_hermes/: __init__.py  schemas.py  tools.py
integrations/hermes-plugin/mnemopay_hermes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
marketing/: blog-treeindex-vectorless-rag.md  tweet-treeindex-launch.md
ops/: workflow-audit-2026-04-23.md
scripts/: run-longmem-semantic.cjs
site/: calculator.html  dashboard.html  enterprise.html  index.html  robots.txt  sitemap.xml  structured-data.json  vercel.json  video-scripts-v2.md  video-scripts.md  vs-kite.html  vs-mem0.html  vs-skyfire.html
src/: adaptive.ts  anomaly.ts  behavioral.ts  claude-cache.ts  client.ts  commerce.ts  fico.ts  fraud-ml.ts  fraud.ts  identity.ts  index.ts  integrity.ts  ledger.ts  network.ts  subagent-cost.ts
test/: sdk.test.js
tests/: benchmark.test.ts  claude-cache.test.ts  client.test.ts  commerce.test.ts  core.test.ts  fact-type.test.ts  fraud.test.ts  geo-fraud.test.ts  governance.spec.ts  graph.test.ts  hyde.test.ts  identity.test.ts  network.test.ts  (+18 more)
(+125 files in other folders)
