[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mnemopay-crewai"
version = "1.0.0"
description = "MnemoPay tools for CrewAI — give any crew persistent memory and micropayments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Jerry Omiagbo", email = "jeremiah@getbizsuite.com"}]
keywords = ["crewai", "mnemopay", "ai-agents", "memory", "payments", "mcp"]

dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/t49qnsx7qt-kpanks/mnemopay-sdk"
Repository = "https://github.com/t49qnsx7qt-kpanks/mnemopay-sdk/tree/master/integrations/crewai"
