[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemopay-hermes"
version = "1.1.1"
description = "MnemoPay plugin for Hermes Agent — persistent memory + micropayment wallet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jerry Omiagbo", email = "jeremiah@getbizsuite.com"},
]
keywords = ["hermes", "agent", "memory", "payments", "mcp", "mnemopay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/mnemopay/mnemopay-sdk"
Repository = "https://github.com/mnemopay/mnemopay-sdk/tree/main/integrations/hermes-plugin"

[project.entry-points."hermes_agent.plugins"]
mnemopay = "mnemopay_hermes:register"

[tool.setuptools.packages.find]
include = ["mnemopay_hermes*"]
